fixed horizontal scrolling issue

--- a/css/custom.scss
+++ b/css/custom.scss
@@ -921,9 +921,8 @@ Linked page - Title header
     margin-bottom: 0;
     text-align: center;
     font-size: 4rem;
-    width: 100%;
-    padding-right: 40px;
-    padding-left: 40px;
+    width: 80%;
+
 }
 
 .jumbo-header-front .anchor::before {
@@ -1233,6 +1232,9 @@ Linked page - skills/experience background
 
 .main-content {
   background-color: #E7E5DF;
+  width: 100%;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -1275,6 +1277,8 @@ Skills/experience pages - Skills and Experience Headings
     -ms-justify-content: center;
     -o-justify-content: center;
     width: 100%;
+    margin-left: auto;
+    margin-right: auto;
     height: 500px;
     margin-bottom: 30px;
     // -webkit-box-shadow: 5px 5px 5px 0px rgba(41, 51, 69, 0.75);
@@ -1434,6 +1438,9 @@ Linked page - Projects
   justify-content: center;
 
   width: 100%;
+  margin-left: auto;
+  margin-right: auto;
+
   height: 100%;
   margin-bottom: 30px;
   // -webkit-box-shadow: 5px 5px 5px 0px rgba(41, 51, 69, 0.75);
